# GPU-accelerated-vector-graphics

./: .gitmodules  CMakeLists.txt  README.md
GPU-accelerated-vector-graphics/assets/: frag.glsl  vert.glsl
GPU-accelerated-vector-graphics/assets/shaders/: basicFrag.glsl  basicVert.glsl  pathFrag.glsl  pathVert.glsl
GPU-accelerated-vector-graphics/src/: main.cpp  scene.h
GPU-accelerated-vector-graphics/src/objects/: path.h
